--- a/bilgi-yarismasi/kulak-egzersiz.html
+++ b/bilgi-yarismasi/kulak-egzersiz.html
@@ -199,15 +199,15 @@
 
         // --- SONUÇ YORUMLARI ---
         const resultLevels = [
-            { min: 90, title: "Mutlak Kulak (Absolut)", comment: "Kusursuz. Sen frekansları resmen görüyorsun! Kesinlikle müzik ile ilgilenmelisin, çünkü senin bir süper gücün var. Ve bu çok az insanda var, mutlaka ama mutlaka bir uzmana danış." },
-            { min: 80, title: "Üst Düzey Kulak", comment: "Mükemmel. Sahne tozunu yutmaya hazırsın, bir insanın doğuştan kazandığı Mutlak Duyum - Absolute kulak seviyesine çok yakınsın. Bir uzmana danışabilirsin." },
-            { min: 70, title: "Eğitimli Kulak", comment: "Gayet iyi. Teknik altyapın sağlam, kulakların notaları seçmekte zorlanmıyor. Hatalarına biraz daha dikkat edersen çok iyi olur." },
-            { min: 60, title: "İyi Seviyede Kulak", comment: "Ortalamanın üzerindesin. Biraz daha pratikle notalarla dostluğunu pekiştirebilirsin. Bir çok insana göre öndesin." },
+            { min: 90, title: "Mutlak Kulak (Absolut)", comment: "Senin Allah'ına Kurban!🥳🎉🎊👏🏻👏🏻 Sen frekansları resmen görüyorsun! Kesinlikle müzik ile ilgilenmelisin, çünkü senin bir süper gücün var. Ve bu çok az insanda var, mutlaka ama mutlaka bir uzmana danış." },
+            { min: 80, title: "Üst Düzey Kulak", comment: "Mükemmel.👏🏻👏🏻👏🏻 Sahne tozunu yutmaya hazırsın, bir insanın doğuştan kazandığı Mutlak Duyum - Absolute kulak seviyesine çok yakınsın. Bir uzmana danışabilirsin." },
+            { min: 70, title: "Eğitimli Kulak", comment: "Gayet iyi.👏🏻👏🏻 Teknik altyapın sağlam, kulakların notaları seçmekte zorlanmıyor. Hatalarına biraz daha dikkat edersen çok iyi olur." },
+            { min: 60, title: "İyi Seviyede Kulak", comment: "Ortalamanın üzerindesin.👍 Biraz daha pratikle notalarla dostluğunu pekiştirebilirsin. Bir çok insana göre öndesin." },
             { min: 50, title: "Müzik Sever (Baraj)", comment: "Tam sınırdasın. Müziği duyuyorsun ama notaların dilini henüz tam sökememişsin." },
             { min: 40, title: "Ortalama Seviye", comment: "Sesleri ayırt ediyorsun ama aralarındaki o ince farklarda kafan karışıyor. Çalışmaya devam!" },
-            { min: 30, title: "Nota Avcısı", comment: "Biraz şans, biraz kulak... Notaları yakalamaya çalışıyorsun ama çoğu elinden kaçıyor." },
+            { min: 30, title: "Nota Avcısı", comment: "Biraz şans, biraz kulak... Notaları yakalamaya çalışıyorsun ama çoğu elinden kaçıyor. Sallamayı azaltmalısın ciğerim" },
             { min: 20, title: "Rastgele Tuturan", comment: "Sesler kulağına geliyor ama beyne gidene kadar yolda kayboluyorlar ciğerim. Ama bir çok insana göre fena değilsin, çalışmaya devam et." },
-            { min: 10, title: "Kulak Uyanıyor", comment: "Daha çok fırın ekmek yemen lazım. Çalışmaya devam!" },
+            { min: 10, title: "Kulak Zor Duyuyor", comment: "Daha çok fırın ekmek yemen lazım. Çalışmaya devam!" },
             { min: 0,  title: "Müzik Kulağın Yok Gibi...", comment: "Ses dünyasına yabancısın. Sen en iyisi bir uzmana danış, bu konuda sıfırsın. Galiba daha önce müzik geçmişin yok ama üzülme, çalışarak düzelir." }
         ];
 
