--- a/online-egitim.html
+++ b/online-egitim.html
@@ -664,15 +664,15 @@
                         <div class="category-grid">
                             <div class="cat-box" onclick="sayfaGoster('quiz-game-view')">
                                 <span class="cat-title">Bilgi Yarışması</span>
-                                <span class="cat-desc">Halk müziği bilginizi test edin ve yarışın.</span>
+                                <span class="cat-desc">Müziği bilginizi test edin ve yarışın. Ne kadar bilgili olduğunuzu gösterin!</span>
                             </div>
                             <div class="cat-box" onclick="sayfaGoster('memory-game-view')">
-                                <span class="cat-title">Müzik Hafıza</span>
-                                <span class="cat-desc">Kartları eşleştir, hafızanı güçlendir. (3-10 Yaş)</span>
+                                <span class="cat-title">Enstrümanlarla Görsel Hafıza</span>
+                                <span class="cat-desc">Kartları eşleştir, oyun oynayarak hafızanı güçlendir. (3-10 Yaş)</span>
                             </div>
                             <div class="cat-box" onclick="sayfaGoster('ear-training-view')">
-                                <span class="cat-title">Mutlak Duyum Testi</span>
-                                <span class="cat-desc">Kulağını test et, notayı bil. (Zor)</span>
+                                <span class="cat-title">Mutlak Duyum Testi ve Kulak Egzersizi</span>
+                                <span class="cat-desc">Bu oyun, kulağının ne kadar keskin olduğunu ölçmek için tasarlandı. Dinle ve Cevapla! Bu oyunda kazanmak veya kaybetmek yok; çalıştıkça gelişen bir kulak var. Ne kadar çok denersen, sesler o kadar netleşir.</span>
                             </div>
                         </div>
                     </div>
