--- a/online-egitim.html
+++ b/online-egitim.html
@@ -1562,10 +1562,11 @@
       }
   }
 
-  // YENİ ÖĞRENCİLERİN AD-SOYADINI İLK BAŞTA BURAYA GİRECEKSİN.
+  // YENİ ÖĞRENCİLERİN AD-SOYADINI İLK BAŞTA BURAYA GİRECEKSİN. KAYDI
   const ogrenciListesi = {
       "Z29rYm95MDlAZ21haWwuY29t": { ad: "R29rMg==", soyad: "UEFJTlRFUg==" },
         "elifin-epostası-gelecek@xyz.com": { ad: "RWxpZg==", soyad: "S0FSTUFO" },
+      "ZmVyaGF0Y2l2YW4wMjA1QG91dGxvb2suY29t": { ad: "RmVyaGF0ZQ==", soyad: "Q2l2YW5lIEJha2FuZQ==" },
       "YnJrc2xudHNzQGdtYWlsLmNvbQ==": { ad: "TWFobXV0IEJ1cmFr", soyad: "QVNMQU5UQcWe" }
   };
 
