--- a/online-egitim.html
+++ b/online-egitim.html
@@ -664,7 +664,7 @@
                         <div class="category-grid">
                             <div class="cat-box" onclick="sayfaGoster('quiz-game-view')">
                                 <span class="cat-title">Bilgi Yarışması</span>
-                                <span class="cat-desc">Müziği bilginizi test edin ve yarışın. Ne kadar bilgili olduğunuzu gösterin!</span>
+                                <span class="cat-desc">Müzik bilginizi test edin ve yarışın. Ne kadar bilgili olduğunuzu herkese gösterin!</span>
                             </div>
                             <div class="cat-box" onclick="sayfaGoster('memory-game-view')">
                                 <span class="cat-title">Enstrümanlarla Görsel Hafıza</span>
