--- a/bilgi-yarismasi/hafiza.html
+++ b/bilgi-yarismasi/hafiza.html
@@ -234,7 +234,8 @@
         <div class="big-icon">🧩</div>
         <h1 class="game-title">Müzik Hafıza</h1>
         <p class="game-desc">Kartları eşleştir, enstrümanları bul!</p>
-        <button class="start-btn-big" onclick="initGame()">OYUNA BAŞLA</button>
+        <p class="game-desc">Baglamagram Games</p>
+        <button class="start-btn-big" onclick="initGame()">OYUNA BAŞLA!</button>
     </div>
 
     <div id="game-container">
