--- a/bilgi-yarismasi/tsm-oyun.html
+++ b/bilgi-yarismasi/tsm-oyun.html
@@ -132,7 +132,9 @@
         <h1>Türk Sanat Müziği<br>Bilgi Yarışması</h1>
         <p style="color:#aaa; margin-bottom:30px;">
             Her soru için <strong>30 saniyeniz</strong> var.<br>
-            Süre biterse soru yanlış sayılır!
+            Süre biterse soru yanlış sayılır!<br>
+            <br>
+            Baglamagram Games
         </p>
         <button class="btn-main" onclick="startGame()">YARIŞMAYA BAŞLA</button>
     </div>
