--- a/bilgi-yarismasi/kulak-egzersiz.html
+++ b/bilgi-yarismasi/kulak-egzersiz.html
@@ -142,7 +142,7 @@
     <div id="start-screen" class="screen active">
         <i class="fas fa-ear-listen" style="font-size: 5rem; color: var(--accent); margin-bottom: 20px;"></i>
         <h1>Mutlak Duyum Testi</h1>
-        <p>Kulağına ne kadar güveniyorsun?<br>Toplam <b>20 Soru</b> sorulacak.<br>Her soruda çalan notayı bilmeye çalış.</p>
+        <p>Kulağına ne kadar güveniyorsun?<br>Toplam <b>20 Soru</b> sorulacak.<br>Her soruda çalan notayı bilmeye çalış.<br>  <br>Baglamagram Games</p>
         <button class="btn-start" onclick="initGame()">TESTİ BAŞLAT</button>
     </div>
 
