--- a/nota-yagmuru.html
+++ b/nota-yagmuru.html
@@ -212,7 +212,7 @@
     <div id="start-screen">
         <i class="fas fa-cloud-rain" style="font-size: 5rem; color: var(--accent); margin-bottom: 20px;"></i>
         <h1>Nota Yağmuru</h1>
-        <p>Yukarıdan düşen notaların ismini bil,<br>yere çarpmadan onları yakala!<br><br><span style="color:var(--accent); font-size:0.9rem;">(Doğru bildikçe hızlanacak!)</span></p>
+        <p>Yukarıdan düşen notaların ismini bil,<br>yere çarpmadan onları yakala!<br><br><span style="color:var(--accent); font-size:0.9rem;">(Baglamagram Games)</span></p>
         <button class="btn-start" onclick="startGame()">BAŞLA</button>
     </div>
 
