--- a/online-egitim.html
+++ b/online-egitim.html
@@ -2047,9 +2047,9 @@
                 game_mem_desc: "Kartları eşleştirip yerini ezberle, hafızanı güçlendir.",
                 game_ear_title: "Mutlak Duyum Testi",
                 game_ear_desc: "Bu oyun, kulağının ne kadar keskin olduğunu ölçmek için tasarlandı.",
-                tsm_game_title: "TSM BİLGİ YARIŞMASI",
+                tsm_game_title: "TSM Bilgi Yarışması",
                 tsm_game_desc: "Makam ve usul bilginizi test edip yeni bilgiler öğrenin.",
-                nota_rain_title: "NOTA YAĞMURU",
+                nota_rain_title: "Nota Yağmuru",
                 nota_rain_desc: "Notaların yerlerini bilmek yetmez, notları ne kadar hızlı algıladığınızı gösteren bir oyun..",
                 back_btn: "Geri",
                 listen_dict: "Dikte Kaydını Dinle:",
@@ -2154,7 +2154,7 @@
                 game_ear_desc: "This game is designed to measure how sharp your ear is.",
                 tsm_game_title: "TURKISH CLASSICAL MUSIC QUIZ",
                 tsm_game_desc: "Test your knowledge of Makam and Usul and learn new things.",
-                nota_rain_title: "NOTE RAIN",
+                nota_rain_title: "Note Rain",
                 nota_rain_desc: "Knowing note positions isn't enough; a game showing how fast you perceive notes..",
                 back_btn: "Back",
                 listen_dict: "Listen to Dictation Recording:",
@@ -2257,9 +2257,9 @@
                 game_mem_desc: "Suraskite kortų poras, įsiminkite vietas, stiprinkite atmintį.",
                 game_ear_title: "Absoliučios klausos testas",
                 game_ear_desc: "Šis žaidimas sukurtas tam, kad pamatuotų jūsų klausos aštrumą.",
-                tsm_game_title: "TURKŲ KLASIKINĖS MUZIKOS VIKTORINA",
+                tsm_game_title: "Turkų Klasikinės Muzikos Viktorina",
                 tsm_game_desc: "Pasitikrinkite savo žinias apie Makam ir Usul bei sužinokite naujų dalykų.",
-                nota_rain_title: "NATŲ LIETUS",
+                nota_rain_title: "Natų Lietus",
                 nota_rain_desc: "Neužtenka žinoti natų vietas; žaidimas, rodantis, kaip greitai suvokiate natas..",
                 back_btn: "Atgal",
                 listen_dict: "Klausytis diktanto įrašo:",
@@ -2467,9 +2467,9 @@
                 game_mem_desc: "Сопоставляйте карты, запоминайте расположение, укрепляйте память.",
                 game_ear_title: "Тест на абсолютный слух",
                 game_ear_desc: "Эта игра создана для измерения остроты вашего слуха.",
-                tsm_game_title: "ВИКТОРИНА ПО TSM",
+                tsm_game_title: "Викторина по Классической Турецкой Музыке",
                 tsm_game_desc: "Проверьте свои знания Макама и Усула.",
-                nota_rain_title: "НОТНЫЙ ДОЖДЬ",
+                nota_rain_title: "Нотный Дождь",
                 nota_rain_desc: "Знать расположение нот недостаточно; игра, показывающая, как быстро вы воспринимаете ноты..",
                 back_btn: "Назад",
                 listen_dict: "Слушать запись диктанта:",
