--- a/online-egitim.html
+++ b/online-egitim.html
@@ -821,6 +821,10 @@
                                 <span class="cat-title" data-translate="game_quiz_title">Bilgi Yarışması</span>
                                 <span class="cat-desc" data-translate="game_quiz_desc">Müzik bilginizi test edin ve yarışın. Ne kadar bilgili olduğunuzu herkese gösterin!</span>
                             </div>
+                            <div class="cat-box" onclick="sayfaGoster('makam-ustadi-view')">
+    <span class="cat-title" data-translate="makam_game_title">Makam Üstadı</span>
+    <span class="cat-desc" data-translate="makam_game_desc">Makamları duyarak tanıma yeteneğinizi geliştirin.</span>
+</div>
                             <div class="cat-box" onclick="sayfaGoster('memory-game-view')">
                                 <span class="cat-title" data-translate="game_mem_title">Enstrümanlarla Görsel Hafıza</span>
                                 <span class="cat-desc" data-translate="game_mem_desc">Kartları eşleştir, oyun oynayarak hafızanı güçlendir.    (3-10 Yaş)</span>
@@ -974,6 +978,26 @@
                         <div class="dashboard-header" style="display: flex; justify-content: space-between;">
                             <h2 data-translate="nota_rain_title">Nota Yağmuru</h2>
                             <div>
+                                <div id="makam-ustadi-view" class="view-section">
+    <div class="dashboard-header" style="display: flex; justify-content: space-between;">
+        <h2 data-translate="makam_game_title">Makam Üstadı</h2>
+        <div>
+            <button onclick="tamEkranYap('makam-frame')" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem; margin-right: 15px; transition:0.3s;" onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='#888'">
+                <i class="fas fa-expand"></i> Tam Ekran
+            </button>
+            <button onclick="window.history.back()" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem;">← <span data-translate="back_btn">Çıkış</span></button>
+        </div>
+    </div>
+    
+    <iframe 
+        id="makam-frame"
+        src="makam-ustadi.html" 
+        width="100%" 
+        height="750" 
+        style="border: none; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.1); margin-top: 10px;"
+        title="Makam Üstadı Oyunu">
+    </iframe>
+</div>
                                 <button onclick="tamEkranYap('nota-frame')" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem; margin-right: 15px; transition:0.3s;" onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='#888'">
                                     <i class="fas fa-expand"></i> Tam Ekran
                                 </button>
@@ -2051,6 +2075,8 @@
                 tsm_game_desc: "Makam ve usul bilginizi test edip yeni bilgiler öğrenin.",
                 nota_rain_title: "Nota Yağmuru",
                 nota_rain_desc: "Notaların yerlerini bilmek yetmez, notları ne kadar hızlı algıladığınızı gösteren bir oyun..",
+                makam_game_title: "Makam Üstadı",
+                makam_game_desc: "Makamları duyarak tanıma yeteneğinizi geliştirin.",
                 back_btn: "Geri",
                 listen_dict: "Dikte Kaydını Dinle:",
                 view_answer: "CEVAP ANAHTARINI GÖRÜNTÜLE",
@@ -2156,6 +2182,8 @@
                 tsm_game_desc: "Test your knowledge of Makam and Usul and learn new things.",
                 nota_rain_title: "Note Rain",
                 nota_rain_desc: "Knowing note positions isn't enough; a game showing how fast you perceive notes..",
+                makam_game_title: "Makam Master",
+                makam_game_desc: "Improve your ability to recognize Makams by ear.",
                 back_btn: "Back",
                 listen_dict: "Listen to Dictation Recording:",
                 view_answer: "VIEW ANSWER KEY",
