--- a/online-egitim.html
+++ b/online-egitim.html
@@ -974,30 +974,10 @@
                         </iframe>
                     </div>
 
-                    <div id="nota-yagmuru-view" class="view-section">
+                   <div id="nota-yagmuru-view" class="view-section">
                         <div class="dashboard-header" style="display: flex; justify-content: space-between;">
                             <h2 data-translate="nota_rain_title">Nota Yağmuru</h2>
                             <div>
-                                <div id="makam-ustadi-view" class="view-section">
-    <div class="dashboard-header" style="display: flex; justify-content: space-between;">
-        <h2 data-translate="makam_game_title">Makam Üstadı</h2>
-        <div>
-            <button onclick="tamEkranYap('makam-frame')" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem; margin-right: 15px; transition:0.3s;" onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='#888'">
-                <i class="fas fa-expand"></i> Tam Ekran
-            </button>
-            <button onclick="window.history.back()" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem;">← <span data-translate="back_btn">Çıkış</span></button>
-        </div>
-    </div>
-    
-    <iframe 
-        id="makam-frame"
-        src="makam-ustadi.html" 
-        width="100%" 
-        height="750" 
-        style="border: none; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.1); margin-top: 10px;"
-        title="Makam Üstadı Oyunu">
-    </iframe>
-</div>
                                 <button onclick="tamEkranYap('nota-frame')" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem; margin-right: 15px; transition:0.3s;" onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='#888'">
                                     <i class="fas fa-expand"></i> Tam Ekran
                                 </button>
@@ -1015,16 +995,30 @@
                         </iframe>
                     </div>
 
-                </div>
-            </div>
-        </div>
+                    <div id="makam-ustadi-view" class="view-section">
+                        <div class="dashboard-header" style="display: flex; justify-content: space-between;">
+                            <h2 data-translate="makam_game_title">Makam Üstadı</h2>
+                            <div>
+                                <button onclick="tamEkranYap('makam-frame')" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem; margin-right: 15px; transition:0.3s;" onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='#888'">
+                                    <i class="fas fa-expand"></i> Tam Ekran
+                                </button>
+                                <button onclick="window.history.back()" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem;">← <span data-translate="back_btn">Çıkış</span></button>
+                            </div>
+                        </div>
+                        
+                        <iframe 
+                            id="makam-frame"
+                            src="makam-ustadi.html" 
+                            width="100%" 
+                            height="750" 
+                            style="border: none; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.1); margin-top: 10px;"
+                            title="Makam Üstadı Oyunu"
+                            allow="autoplay">
+                        </iframe>
+                    </div>
 
-    </div>
+                </div> </div> </div> </div> ```
 
-    <div class="image-modal" id="imgModal">
-        <span class="close-modal" onclick="modalKapat()">×</span>
-        <img id="modalImg" src="" alt="Cevap Anahtarı">
-    </div>
 
     <footer>
         <div class="social-wrapper">
