--- a/online-egitim.html
+++ b/online-egitim.html
@@ -1253,7 +1253,7 @@
             btn.style.borderColor = "#666"; // Rengi biraz soldur (pasif gibi)
             btn.style.cursor = "default"; // Tıklama işaretini kaldır
             btn.removeAttribute("onclick"); // Tıklama özelliğini kapat
-            txt.innerText = "SORU KAYDI 5. SANİYEDEN SONRA BAŞLAYACAKTIR."; // İSTEDİĞİN YAZI BURAYA
+            txt.innerText = "SORU KAYDI 5. SANİYEDEN SONRA BAŞLAYACAKTIR. OYNATICININ GELMESİ İÇİN LÜTFEN BEKLEYİN"; // İSTEDİĞİN YAZI BURAYA
 
             let embedUrl = audioId ? "https://drive.google.com/file/d/" + audioId + "/preview" : "";
             document.getElementById("exam-audio-player").src = embedUrl;
