--- a/online-egitim.html
+++ b/online-egitim.html
@@ -1054,7 +1054,10 @@
 
                 </div> </div> </div> </div> 
 
-
+<div id="imgModal" class="image-modal" onclick="if(event.target.id === 'imgModal') modalKapat()">
+        <span class="close-modal" onclick="modalKapat()">×</span>
+        <img id="modalImg" src="">
+    </div>
     <footer>
         <div class="social-wrapper">
             <a href="https://www.instagram.com/baglamagram" target="_blank" class="social-item"><i class="fab fa-instagram"></i></a>
