--- a/online-egitim.html
+++ b/online-egitim.html
@@ -562,7 +562,7 @@
                     </div>
 
                     <a href="https://wa.me/905335060921" target="_blank" class="whatsapp-sidebar-btn">
-                        <i class="fab fa-whatsapp"></i> <span data-translate="portal_menu_whatsapp">Soru Sor / Ödev Gönder</span>
+                        <i class="fab fa-whatsapp"></i> <span data-translate="portal_menu_whatsapp">Danışma</span>
                     </a>
                 </div>
 
