--- a/online-egitim.html
+++ b/online-egitim.html
@@ -2231,7 +2231,7 @@ gununBilgisiniGetir();
                 portal_menu_tuner: "Akort Cihazı",
                 portal_menu_live: "Canlı Ders",
                 portal_menu_ai: "BurakAI Hoca (beta)",
-                portal_menu_whatsapp: "Soru Sor / Ödev Gönder",
+                portal_menu_whatsapp: "Danışma",
                 portal_welcome: "Merhaba!",
                 portal_card_baglama_desc: "Uzun-Kısa sap bağlama eğitimi için ders notları, notalar ve egzersizler.",
                 ai_badge: "YENİ",
