--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 
         <div class="cta-buttons">
             <a href="konserler.html" class="btn" data-lang="btn_concerts">Konserleri Keşfet</a>
-            <a href="siirler.html" class="btn btn-secondary" data-lang="btn_poems">Şiirleri Oku</a>
+            <a href="online-egitim.html" class="btn btn-secondary" data-lang="btn_online_edu">Online Eğitim</a>
         </div>
     </header>
 
