--- a/bilgi-yarismasi/kulak-egzersiz.html
+++ b/bilgi-yarismasi/kulak-egzersiz.html
@@ -308,11 +308,13 @@
         // Sonuç Yorumları
         const resultComments = {
             tr: [
-                { min: 99, title: "Mutlak Kulak (Absolut)", comment: "Senin Allah'ına Kurban!🥳🎉🎊 Sen frekansları resmen görüyorsun! Kesinlikle müzik ile ilgilenmelisin, çünkü senin bir süper gücün var." },
-                { min: 80, title: "Üst Düzey Kulak", comment: "Mükemmel.👏🏻 Sahne tozunu yutmaya hazırsın, doğuştan gelen o yeteneğe çok yakınsın." },
+                { min: 96, title: "Mutlak Kulak (Absolut)", comment: "Senin Allah'ına Kurban!🥳🎉🎊 Sen frekansları resmen görüyorsun! Absolut Kulak adı verilen, çok az insanın sahip olduğu bir yeteneğin var. Kesinlikle müzik ile ilgilenmelisin, mutlaka bir müzik uzmanına danış." },
+                { min: 80, title: "Üst Düzey Kulak", comment: "Mükemmel.👏🏻 Sahne tozunu yutmaya hazırsın, kulağın gerçekten diğer insanlara nazaran çok çok iyi. Doğuştan gelen Absolut Kulağa çok yakınsın." },
                 { min: 60, title: "İyi Seviyede Kulak", comment: "Ortalamanın üzerindesin.👍 Biraz daha pratikle notalarla dostluğunu pekiştirebilirsin." },
                 { min: 40, title: "Ortalama Seviye", comment: "Sesleri ayırt ediyorsun ama aralarındaki o ince farklarda kafan karışıyor. Çalışmaya devam!" },
-                { min: 0, title: "Geliştirilmeli", comment: "Ses dünyasına biraz yabancısın. Üzülme, kulak eğitimiyle her şey gelişir." }
+                { min: 10, title: "Pek İyi Değil", comment: "Ses dünyasına biraz yabancısın. Biraz daha müzik ile haşır neşir olsan iyi olur. Üzülme, kulak eğitimiyle her şey gelişir." },
+                { min: 0, title: "Sağır Mısın Kanka?", comment: "Kanka sen ya sağırsın ya da bugüne kadar müzik dinlememişsindir. Hepsini sallasan bile 1-2 tane yapabilirdin. Kanka bence sen bu işi zirvede bırak, bak ciddi söylüyorum.😁" }
+            ],
             ],
             en: [
                 { min: 90, title: "Absolute Pitch (Virtuoso)", comment: "Unbelievable!🥳🎉 You can literally 'see' the frequencies! You have a superpower, definitely pursue music." },
